ajout de theta dans les paramètres, ajout des algorithmes hybride et rk4 et modification de la fonction de lecture des inputs

--- a/HW1/Wave/Makefile
+++ b/HW1/Wave/Makefile
@@ -1,6 +1,6 @@
 # Compiler and flags
 CXX = g++
-CXXFLAGS = -std=c++20 -Wall -Wextra -fopenmp -O3 -ftree-vectorize -march=native -mtune=native -flto -fexceptions
+CXXFLAGS = -std=c++20 -Wall -Wextra -fopenmp -O3 -ftree-vectorize -march=native -mtune=native -flto -fexceptions -I/usr/include/eigen3
 
 # Force English output for all commands
 export LC_ALL=C
