--- a/HW1/Euler/Makefile
+++ b/HW1/Euler/Makefile
@@ -1,6 +1,6 @@
 # Compiler and flags
 CXX = g++
-CXXFLAGS = -std=c++20 -Wall -Wextra -fopenmp -O3 -ftree-vectorize -march=native -mtune=native -flto -fexceptions
+CXXFLAGS = -std=c++20 -Wall -Wextra -fopenmp -O3 -ftree-vectorize -march=native -mtune=native -flto -fexceptions -I/usr/include/eigen3 -I/home/apollon/hitra2/include/eigen-3.4.0
 
 # Force English output for all commands
 export LC_ALL=C
